# Mony

./: .env.example  .gitignore  AGENTS.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  setup.py  ui_credentials.json
client/: .env.example  package-lock.json
client/src/: App.css  App.jsx  index.css
designers/: conservative.md  modern.md
mony/: __init__.py  cli.py  ui.py
mony/designers/: brutalist.md  conservative.md  cyberpunk.md  december-2025.md  funky.md  material.md  modern.md  october-2025.md  playful.md  research_history.json  skeuomorphic.md
server/: index.js  package.json
