[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mony"
version = "0.1.2"
description = "Generate UI concept images by combining project briefs with designer personas and the OpenRouter image API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Luka Finzgar"}
]
keywords = ["ui", "design", "image-generation", "openrouter", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/Lukafin/mony"
"Bug Reports" = "https://github.com/Lukafin/mony/issues"
"Source" = "https://github.com/Lukafin/mony"

[project.scripts]
mony = "mony.cli:main"

[tool.setuptools]
packages = ["mony"]

[tool.setuptools.package-data]
mony = ["designers/*.md"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=mony --cov-report=term-only"
